objects/LP_Course_Offering__c.object
<CustomObject><fields>
        <fullName>Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Offering</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipName>SI_Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Learning_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Program</label>
        <referenceTo>Learning_Program__c</referenceTo>
        <relationshipLabel>Learning Program Course Offerings</relationshipLabel>
        <relationshipName>Learning_Program_Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Term__c</fullName>
        <formula>Course_Offering__r.hed__Term__r.Name</formula>
        <label>Term</label>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Learning Program Course Offering</label><nameField>
        <displayFormat>LPCO-{00000}</displayFormat>
        <label>Learning Program Course Offering Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Learning Program Course Offerings</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>